fix some style issues and start work on mobile

--- a/web-2/css/main.css
+++ b/web-2/css/main.css
@@ -100,6 +100,12 @@
     padding: 10px;
 }
 
+.table {
+    table-layout: fixed;
+    border-collapse: collapse;
+    margin-bottom: 0;
+}
+
 .table thead tr {
     height: 11px;
     border: none;
@@ -131,36 +137,57 @@
     width: 100%;
 }
 
-.table thead tr th:first-child{
-    width: 3%;
+.table caption {
+    color: #9b9b9b;
+    text-transform: uppercase;
+    font-size: 10px;
+    padding-left: 15px;
+    margin-top: 10px;
 }
 
-.table thead tr th:nth-child(2){
+.table thead tr th.avg{
+    width: 5%;
+}
+
+.table thead tr th.rest-name{
     width: 15%;
 }
 
-.table thead tr th:nth-child(3){
-    width: 10%;
+.table thead tr th.rest-style{
+    width: 8%;
 }
 
-.table thead tr th:nth-child(4){
+.table thead tr th.barstool{
+    width: 6%;
+}
+
+.table thead tr th.yelp{
+    width: 6%;
+}
+
+.table thead tr th.infatuation{
+    width: 8%;
+}
+
+.table thead tr th.zaislifescore{
+    width: 7%;
+}
+
+.table thead tr th.expand{
     width: 5%;
 }
 
-.table thead tr th:nth-child(5){
-    width: 5%;
+.table thead tr th.zaisliferecom{
+    width: 43%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.table thead tr th:nth-child(6){
-    width: 5%;
-}
-
-.table thead tr th:nth-child(7){
-    width: 5%;
-}
-
-.table thead tr th:nth-child(8){
-    width: 52%;
+.table tbody tr td.zaisliferecom{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .table thead tr th {
@@ -174,10 +201,15 @@
     color: #000000;
     border: none;
     height: 11px;
-    padding: 0px 12px 12px;
+    padding: 0px 12px 7px;
     text-align: middle;
     cursor: pointer;
     text-transform: uppercase;
+}
+
+.table thead tr th span:first-child , .table thead tr th a{
+    height: 15px;
+    display: inline-block;
 }
 
 .table tbody tr {
@@ -262,6 +294,13 @@
     text-align: left;
 }
 
+.table tbody td.expand {
+    text-align: middle;
+    color: #000;
+    font-weight: bold;
+    cursor: pointer;
+}
+
 .table .zaisliferecom .map-all {
     font-size: 8px;
     font-weight: 900;
@@ -283,7 +322,7 @@
     display: inline-block;
     height: 3px;
     line-height: 11px;
-    margin-left: 10px;
+    margin-left: 4px;
 }
 
 .table th span.arrows:before,
